@@ -80,6 +80,7 @@
 .table-schema__header,
 .table-schema__detail__cell {
   background-color: @block-bg;
+  position: relative;
 }
 
 .table-schema h2 {
@@ -122,4 +123,15 @@
     width: 100%;
   }
   
+}
+
+.generation-expression {
+  font-family: monospace;
+}
+
+.generation-expression--help {
+  position: absolute;
+  color: #fff;
+  top: 30%;
+  right: 7px;
 }
